force-app/objects/Bid_URL_SE__c/Bid_URL_SE__c.object-meta.xml
<CustomObject>
    <label>Bid URL SE</label>
    <nameField>
        <label>Bid URL SE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bids URL SE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>