force-app/objects/Bid_URL_SE__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Bids_URL_Tmp</relationshipName>
    <type>Lookup</type>
</CustomField>