force-app/objects/Bid_URL_SE__c/fields/URL_Link__c.field-meta.xml
<CustomField>
    <fullName>URL_Link__c</fullName>
    <formula>HYPERLINK( URL__c , &quot;Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL Link</label>
    <type>Text</type>
</CustomField>