force-app/objects/Bid_URL_SE__c/listViews/Free_Bid_URL.listView-meta.xml
<ListView>
    <fullName>Free_Bid_URL</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>URL__c</columns>
    <columns>URL_Link__c</columns>
    <columns>Used__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Used__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Free Bid URL</label>
</ListView>